# latex-mk

./: .gitignore  .travis.yml  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  NEWS  README  README.to-release  TODO  acinclude.m4  autogen.sh  config.guess  config.sub  configure.ac  dated_draft.ps  ieee-copyout  ieee-copyout.in  install-sh  latex-mk-virtuoso.in  latex-mk.in  latex.mk.in  latex.mk.in.in  latex.subdir.mk.in.in  lgrind.mk.in.in  mkinstalldirs  mpost.mk.in.in  sweave.mk.in.in  tgif.mk.in  tgif.mk.in.in  virtuoso.mk.in.in  xfig.mk.in.in
doc/: .gitignore  Makefile.am  latex-mk.texi  mdate-sh  prefix.texi.in  texinfo.tex
example/: Makefile.am  README-example.txt  README.to-release  biblio.tex  ex2.tex  ex3.tex  ex4.bib  ex4.tex  ex5.tex  example.conf.in  example.tex  makefile.in  mkfile.in  refs.bib
example/tgif/: Makefile.am
htdocs/: Makefile  bugs.shtml  examples.shtml  faq.shtml  favicon.xpm  history.shtml  index.shtml  left_column.incl  main_footer.incl  news.shtml  obtaining.shtml  page_start.incl  upload_list
htdocs/images/: curved.xcf  logo.xcf
htdocs/utils/: shtml2html
testsuite/: .gitignore  Makefile.am  README.txt  golden.mk  run_tests  run_tests.sh  script_tests.list  script_tests.sh  simple.mk  sort_sections.awk  testfile.mk.in  tests.list
testsuite/bmake/: Makefile.am  basic1_dvipdfm_pdf2.ref  basic1_pdflatex_pdf1.ref  basic_tgifdirs.ref  basic_xfigdirs.ref
testsuite/bmake_ref/: Makefile.am  basic1_clean1.ref  basic1_dvipdfm_pdf1.ref  basic1_dvipdfm_pdf2.ref  basic1_dvipdfm_ps2.ref  basic1_html1.ref  basic1_html4.ref  basic1_html5.ref  basic1_html6.ref  basic1_html7.ref  basic1_html8.ref  basic1_landscape_dvipdfm.ref  basic1_landscape_pdf.ref  basic1_landscape_ps.ref  basic1_landscape_view.ref  basic1_landscape_viewpdf.ref  basic1_landscape_viewps.ref  basic1_pdf1.ref  basic1_pdf2.ref  basic1_pdflatex_dvi2.ref  basic1_pdflatex_pdf2.ref  basic1_pdflatex_ps1.ref  basic1_pdflatex_ps2.ref  basic2_dvi3.ref  basic_bibtexsrcs_dvi3.ref  basic_bibtexsrcs_pdf1.ref  basic_bibtexsrcs_pdf2.ref  basic_lgrinddirs.ref  basic_lgrinddirs2.ref  basic_lgrinddirs3.ref  basic_lgrindsrcs.ref  basic_lgrindsrcs2.ref  basic_mpostdirs1.ref  basic_mpostsrcs2.ref  basic_mpostsrcs3.ref  basic_tgifdirs.ref  basic_tgifsrcs.ref  basic_xfigdirs.ref  basic_xfigsrcs.ref  draft1.ref  (+53 more)
testsuite/gmake/: Makefile.am  basic1_ps1.ref
testsuite/gmake_ref/: Makefile.am  basic1_clean1.ref  basic1_dvipdfm_dvi2.ref  basic1_dvipdfm_pdf1.ref  basic1_dvipdfm_pdf2.ref  basic1_dvipdfm_ps2.ref  basic1_html1.ref  basic1_html2.ref  basic1_html3.ref  basic1_html4.ref  basic1_html5.ref  basic1_html7.ref  basic1_landscape_dvipdfm.ref  basic1_landscape_pdf.ref  basic1_landscape_ps.ref  basic1_landscape_view.ref  basic1_landscape_viewpdf.ref  basic1_landscape_viewps.ref  basic1_pdf1.ref  basic1_pdflatex_dvi2.ref  basic1_pdflatex_pdf1.ref  basic1_pdflatex_pdf2.ref  basic1_ps1.ref  basic2_dvi3.ref  basic_bibtexsrcs_dvi1.ref  basic_bibtexsrcs_dvi2.ref  basic_bibtexsrcs_dvi3.ref  basic_lgrinddirs.ref  basic_lgrinddirs2.ref  basic_lgrinddirs3.ref  basic_lgrindsrcs.ref  basic_lgrindsrcs2.ref  basic_mpostsrcs1.ref  basic_mpostsrcs2.ref  basic_tgifdirs.ref  basic_tgifsrcs.ref  basic_xfigdirs.ref  basic_xfigsrcs.ref  draft1.ref  graphic1_dvi1.ref  (+56 more)
testsuite/latex_mk_ref/: Makefile.am  basic1.ref  basic2.ref  basic4.ref  basic_space1.ref  bibtex1.ref  bibtex2.ref  bibtex4.ref  bibtex5.ref  bibtex6.ref  bibunits1.ref  bibunits2.ref  bibunits3.ref  bibunits4.ref  bibunits5.ref  bibunits6.ref  bibunits8.ref  makegls1.ref  makeindex1.ref  makeindex2.ref  makeindex4.ref  pdf1.ref  pdf2.ref  pdf3.ref  pdf4.ref  vars1.ref  vars2.ref  vars3.ref  vars4.ref  vars5.ref  vars6.ref  vars7.ref
testsuite/texfiles/: Makefile.am  README.txt  basic1.tex  bibliography.bib  bibliography.tex  bibliography2.tex  bibunits1.tex  bibunits2.tex  figures.tex  included_bib.tex  index.tex  lof.tex  lot.tex  nomencl.tex  tables.tex  toc.tex
travis/: bmake-patch00  failures.sh  install-bmake.sh
